--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    background-color: #f0f0f0;
 }
 
 .App {
@@ -50,15 +51,22 @@ body {
     width: 25%;
     height: 200px;
     align-items: center;
+    border-radius: 25px;
 }
+
+.im-ej {
+    width: 400px;
+}
+
+.separador {}
 
 .boton {
     color: black;
 }
 
-footer {
-    text-align: center;
-    padding-top: 400px;
+.p-3 {
+    background-color: rgb(0, 0, 0, 0.6);
+    color: #Effff9;
 }
 
 img {
@@ -69,6 +77,10 @@ img {
 .comp {
     width: 350px;
     height: 240px;
+}
+
+.v {
+    padding: 10px;
 }
 
 .list-grou-item {
