--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,46 @@ body {
     }
 }
 
+@media(max-width: 980px) {
+    [class*="col-"] {
+        width: 100%;
+        display: block;
+        text-align: center;
+        padding: 0 auto;
+    }
+    .pendulo {
+        width: 75%;
+    }
+    iframe {
+        width: 100%;
+    }
+}
+
+@media(max-width: 768px) {
+    [class*="col-"] {
+        width: 100%;
+        display: inline;
+        text-align: center;
+    }
+    .pendulo {
+        width: 50%;
+    }
+    iframe {
+        width: 100%;
+    }
+}
+
+@media(max-width: 480px) {
+    [class*="col-"] {
+        width: 100%;
+        display: inline;
+        text-align: left;
+    }
+    .pendulo {
+        width: 50%;
+    }
+}
+
 .App-header {
     background-color: #282c34;
     min-height: 100vh;
@@ -54,9 +94,7 @@ body {
     border-radius: 25px;
 }
 
-.im-ej {
-    width: 400px;
-}
+.im-ej {}
 
 .separador {}
 
